--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "json-rpc-server"
 homepage = "https://github.com/shaorongqiang/json-rpc-server.git"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 license = "MIT OR Apache-2.0"
 description = "A framework for http server"
@@ -19,3 +19,4 @@ serde = { version = "1.0.180", features = ["derive"] }
 serde_json = "1.0.104"
 async-trait = "0.1.72"
 log = "0.4.19"
+hyper-tls = "0.5.0"
