--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,15 +8,13 @@ description = "A framework for http server"
 
 [dependencies]
 anyhow = "1.0.72"
-hyper = { version = "0.14.27", features = [
-  "client",
-  "http1",
-  "http2",
-  "tcp",
-  "server",
-] }
-serde = { version = "1.0.180", features = ["derive"] }
-serde_json = "1.0.104"
-async-trait = "0.1.72"
-log = "0.4.19"
-hyper-tls = "0.5.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+async-trait = "0.1"
+log = "0.4"
+tokio = { version = "1.0", features = ["full"] }
+hyper = { version = "1.0", features = ["full"] }
+hyper-util = { version = "0.1", features = ["full"] }
+hyper-tls = "0.6"
+http-body-util = "0.1"
+bytes = "1.0"
